# vagas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  INSTRUÇÕES.md  Makefile  README.md  docker-compose.yaml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
contracts/: models.py  serializers.py  urls.py  views.py
contracts/migrations/: 0001_initial.py  0002_contract_client.py
core/: models.py  permissions.py  serializer_fields.py  tests.py
oniAPI/: settings.py  urls.py  wsgi.py
onidataProject/vagas/: db.sqlite3  manage.py
onidataProject/vagas/contracts/: admin.py  models.py  serializer.py  views.py
onidataProject/vagas/contracts/migrations/: 0001_initial.py  0002_auto_20200208_0457.py
onidataProject/vagas/payments/: models.py  serializer.py  views.py
onidataProject/vagas/payments/migrations/: 0001_initial.py  0002_auto_20200208_0457.py  0003_auto_20200210_1549.py
onidataProject/vagas/vagas/: settings.py  urls.py  views.py  wsgi.py
payments/: models.py  serializers.py  urls.py  views.py
payments/migrations/: 0001_initial.py
src/: manage.py
src/apps/loans/: admin.py  apps.py  models.py
src/apps/loans/api/v1/: repositories.py  serializers.py  services.py  views.py
src/apps/loans/migrations/: 0001_initial.py
src/apps/payments/: admin.py  models.py
src/onidata/: asgi.py  settings.py  urls.py  wsgi.py
tests/: settings.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
web/: Dockerfile  requirements.txt
